<resources>
    <string name="app_name">PocketStatistician</string>

    <!--NewStatistic editor-->
    <string name="statistics_editor_name">Название статистики</string>
    <string name="statistics_editor_count">Количество переменных</string>
    <string name="variable">Переменная %1$d</string>
    <string name="not_chosen">Тип не выбран</string>
    <string name="name_is_not_unique">Статистика с таким именем уже существует</string>

    <!--NewVariable editor-->
    <string name="variable_name">Название переменной</string>
    <string name="variable_type">Тип переменной</string>
    <string name="variants_count">Количество вариантов</string>
    <string name="variant">Вариант</string>
    <string name="variants">Варианты</string>

    <string name="type_name">Название типа</string>
    
    <string-array name="variable_types">
        <item>Регрессионный</item>
        <item>Классификационный</item>
    </string-array>

    <!--Dialog strings-->
    <string name="empty_string">Вы ввели пустую строку</string>
    <string name="not_int">Это не число</string>
    <string name="not_enough_variables">Нужны как минимум две переменные</string>
    <string name="not_enough_variants">Нужны как минимум два варианта</string>
    <string name="to_variables_editor">Создать переменные</string>
    <string name="to_main_activity">К главному меню</string>
    <string name="you_chose">Вы выбрали:</string>
    <string name="nothing_is_chosen">Не выбрано</string>

    <!--Activities-->
    <string name="new_statistics_activity_name">New Statistics Activity</string>
    <string name="new_type_activity_name">New Type Activity</string>

    <!--Buttons-->
    <string name="ok">Ок</string>
    <string name="save">Сохранить</string>
    <string name="back">Назад</string>
    <string name="type_variants">Введите варианты</string>
    <string name="data_is_not_correct">Неправильно введены данные</string>
    <string name="search_items">Выберите переменную</string>
    <string name="close">Закрыть</string>
    <string name="add_new_variable">Добавить…</string>
    <string name="type">Тип</string>
    <string name="create_new_statistics">Новая статистика</string>

    <!--StatisticMenuActivity-->
    <string name="create_new_type">Новый тип</string>
    <string name="add_note">Добавить запись</string>
    <string name="open_as_table">Открыть как таблицу</string>
    <string name="analyze">Проанализировать</string>
    <string name="predicting">Меню предсказаний</string>
    <string name="graph">Меню графиков</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="export">Экспортировать</string>


    <!--ExportActivity-->
    <string name="to_csv">В .csv</string>
    <string name="to_json">В .json</string>

    <string name="explorer">Проводник</string>
    <string name="delete_note">Удалить запись</string>
    <string name="cancel">Отмена</string>
    <string name="move_note">Переместить запись</string>
    <string name="note_number">Запись %1$d</string>
    <string name="note">Запись:</string>
    <string name="variable_value">Переменная:</string>
    <string name="action_settings">Настройки</string>

    <string name="add_variant">Добавить вариант</string>
    <string name="delete_anyway">Действительно удалить?</string>

    <string name="statistics_quantity">%1$d статистик</string>
    <string name="types_quantity">%1$d типов</string>
    <string name="note_quantity">%1$d записей</string>
    <string name="variant_quantity">%1$d вариантов</string>
    <string name="variable_quantity">%1$d переменных</string>

    <string name="statistic_menu">Меню статистики</string>
    <string name="add_note_header">%1$s с %2$d записями</string>
    <string name="cannot_delete">Нельзя удалить</string>
    <string name="finished">Готово</string>
    <string name="add_note_header2">%1$d/%2$d</string>
    <string name="clear">Очистить</string>
    <string name="table_label">Таблица</string>

    <string name="search_icon_description">Значок поиска</string>
    <string name="do_you_want_to_add_note">Добавить новую запись?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="edit_or_not">Внимание, все данные связанные с этой переменной будут удалены</string>
    <string name="continue_anyway">Продолжить</string>

    <string name="statistics">Статистики</string>
    <string name="types">Типы</string>
    <string name="action_new">Создать новый</string>
    <string name="not_saved_data_will_be_deleted">Все несохранённые данные будут удалены, продолжить?</string>
    <string name="choose_type">Выберите тип</string>
    <string name="created">%1$s создан</string>
    <string name="updated">%1$s обновлён</string>

    <string name="no_name">Введите имя</string>
    <string name="question">Вопрос</string>
    <string name="saved">Сохранено</string>

    <!--Analyze-->
    <string name="edit_manually">Настроить</string>
    <string name="variables_count">Количество переменных:</string>
    <string name="notes_count">Количество записей:</string>
    <string name="empty_notes">Количество пустых записей:</string>
    <string name="empty_variables">Количество пустых переменных:</string>
    <string name="analyze_it">Проанализировать</string>

</resources>
