<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTableTop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="7dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statistics_editor_name"
                android:textSize="20sp"
                android:padding="7dp"
                android:background="@drawable/input_head"
/>

            <EditText
                android:id="@+id/name_statistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints="untitled"
                android:padding="7dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input_foot"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="7dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statistics_editor_count"
                android:padding="7dp"
                android:textSize="20sp"
                android:background="@drawable/input_head"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_foot">

                <EditText
                    android:id="@+id/variables_count"
                    android:layout_weight="8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:autofillHints="2"/>

                <Button
                    android:id="@+id/ok_count_button"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:background="@drawable/button"
                    android:onClick="onCountButtonClick"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:weightSum="100"
                android:background="@drawable/input_head">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:text="@string/variable_name"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:text="@string/type"
                    android:gravity="center"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_foot">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_of_variables"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center">

        <Button
            android:id="@+id/createStatistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:paddingHorizontal="10dp"
            android:background="@drawable/accented_rounded"
            android:onClick="onSaveButtonClick"/>
    </RelativeLayout>

</LinearLayout>