<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_items"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100">

            <EditText
                android:id="@+id/searchBox"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="100"
                android:layout_marginEnd="5dp"
                android:background="#ffffff"
                android:inputType="text" />

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_search_black_36dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="83"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dialog_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/you_chose"
                android:gravity="center"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/chosen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20sp"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <Button
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:id="@+id/closeButton"
                android:text="@string/close"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/add_new_variable"
                android:layout_width="wrap_content"
                android:minWidth="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/add_new_variable"
                android:textSize="15sp" />

            <Button
                android:id="@+id/okButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:text="@string/ok"
                android:textSize="15sp" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>